# Senior-Dev-Assessment--Indranil

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
front-end/: package-lock.json  package.json
front-end/src/app/: page.tsx
